@@ -16,15 +16,13 @@ HOMEPAGE="https://github.com/github/albino/"
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64"
-IUSE="test"
+IUSE=""
 
 DEPEND=">=dev-ruby/posix-spawn-0.3.6"
 RDEPEND="${DEPEND}
 	dev-python/pygments"
 
-RESTRICT="test"
-
-each_ruby_test() {
-	${RUBY} test/albino_test.rb || die "tests failed"
-	${RUBY} test/multi_albino_test.rb || die "tests failed"
-	}
+#each_fakegem_test() {
+#	${RUBY} test/albino_test.rb || die "tests failed"
+#	${RUBY} test/multi_albino_test.rb || die "tests failed"
+#}
